@@ -97,6 +97,8 @@ jalv_init(int* argc, char*** argv, JalvOptions* opts)
 		  "Buffer size for plugin <=> UI communication", "SIZE"},
 		{ "update-frequency", 'r', 0, G_OPTION_ARG_DOUBLE, &opts->update_rate,
 		  "UI update frequency", NULL},
+		{ "control", 'c', 0, G_OPTION_ARG_STRING_ARRAY, &opts->controls,
+		  "UI update frequency", NULL},
 		{ 0, 0, 0, 0, 0, 0, 0 } };
 	GError* error = NULL;
 	const int err = gtk_init_with_args(
