@@ -1,12 +1,13 @@
 jalv (1.4.3) unstable;
 
+  * Add -c option for setting controls from the command line
   * Hide controls for ports with notOnGUI property in generic UI
     (based on patch from Robin Gareus)
   * Support ui:portMap feature to allow UIs to avoid hard-coded port indices
     (useful for compatibility and separately distributed UIs)
   * Add --no-menu option for jalv.gtk
 
- -- David Robillard <d@drobilla.net>  Wed, 18 Dec 2013 22:54:27 -0500
+ -- David Robillard <d@drobilla.net>  Wed, 25 Dec 2013 14:03:37 -0500
 
 jalv (1.4.2) stable;
 
